# ByteVerse

./: README.md
CreditX/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json
CreditX/src/: App.tsx  api.tsx  index.css
CreditX/src/components/: AnimatedGradient.tsx  AnimatedLoading.tsx  BackgroundEffect.tsx  BureauSelector.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ComparisonChart.tsx  CreditScoreCircle.tsx  CreditScoreIndicator.tsx  CreditSummary.tsx  DecisionBadge.tsx  FinancialAdvisorChat .tsx  FinancialPlanningForm.tsx  Header.tsx  LoanSummary.tsx  Report.tsx  ReportSection.tsx  Sidebar.tsx  TermItem.tsx  UserDetails.tsx  WelfareEligibilityCheck.tsx
CreditX/src/components/Landing/: BenefitsSection.tsx  ButtonLoader.tsx  CTA.tsx  Features.tsx  Footer.tsx  (+5 more)
CreditX/src/data/: mockData.ts
CreditX/src/pages/: AdminDashboard.tsx  ExpenseAnalysis.tsx  Index.tsx  NotFound.tsx  UserDashboard.tsx  UserForm.tsx  WelfareScheme.tsx  chat.tsx  report.tsx  users.tsx
CreditX/src/types/: credit.ts
CreditX/src/utils/: animation-variants.ts
hackathon-backend/: README.md  conversation.json  expense_analysis_api.py  main.py  pyproject.toml
hackathon-backend/app/: main.py
hackathon-backend/app/config/: settings.py
hackathon-backend/app/prompts/: ais_prompt.py  bank_statement.py  chat_prompt.py  credit_score_prompt.py
hackathon-backend/app/routers/: assistant.py  chat.py  loan.py  request.py  users.py
hackathon-backend/app/services/: bureau.py  llm.py  supabase.py
hackathon-backend/app/utils/: pdf_reader.py
